# gnu_mpria

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-alpha  README-dev  configure.ac  mpria.m4
doc/: Makefile.am  mpria.texi
examples/: Makefile.am  mpria_version.c
m4/: mpria_ax_prog_path_gmp_cc.m4  mpria_maintainer.m4  mpria_setup.m4
src/: Makefile.am  adhoc.c  arithmetic.c  basic.c  confrac.c  constants.c  conversion.c  inline.c  inline_mp.c  libversion.c  mpria.h.in  mpria.map  mpria_assert.h  mpria_config.h.in  mpria_internal.h  numtheory.c  random.c  string.c  workspace.c
tests/: Makefile.am  mpria_numtheory.gi  mpria_test.gi  mpria_test.h  results.c  test_arithmetic.c  test_confrac.c  test_constants.c  test_conversion.c  test_libversion.c  test_mpri_2exp_atan_table.c  test_mpri_2exp_atan_table.cg  test_mpri_add_table.c  test_mpri_add_table.cg  test_mpri_div_table.c  test_mpri_div_table.cg  test_mpri_get_d_table.c  test_mpri_get_d_table.cg  test_mpri_mul_table.c  test_mpri_mul_table.cg  test_mpri_rsqrt_table.c  test_mpri_rsqrt_table.cg  test_mpri_set_d_table.c  test_mpri_set_d_table.cg  test_mpri_set_q_table.c  test_mpri_set_q_table.cg  test_mpri_set_qi_q_table.c  test_mpri_set_qi_q_table.cg  test_mpri_set_qi_z_ASGMT_table.c  test_mpri_set_qi_z_ASGMT_table.cg  test_mpri_set_rsqrt_q_table.c  test_mpri_set_rsqrt_q_table.cg  test_mpri_set_sqrt_q_table.c  test_mpri_set_sqrt_q_table.cg  test_mpri_sqrt_table.c  test_mpri_sqrt_table.cg  test_mpri_sub_table.c  test_mpri_sub_table.cg  test_numtheory.c  test_random.c  (+2 more)
